assets/contiamo_tracker/alertmanager-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
  labels:
     alertmanager: main
  name: alertmanager
  namespace: monitoring
spec:
  rules:
  - host: alertmanager.track.contiamo.com
    http:
      paths:
      - backend:
          serviceName: alertmanager-main
          servicePort: web
        path: /
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-production
  name: alertmanager.track.contiamo.com-oauth2-proxy
  namespace: monitoring
spec:
  rules:
  - host: alertmanager.track.contiamo.com
    http:
      paths:
      - backend:
          serviceName: oauth2-proxy
          servicePort: 4180
        path: /oauth2
  tls:
  - hosts:
    - alertmanager.track.contiamo.com
    secretName: alertmanager.track.contiamo.com-oauth2-proxy
