assets/contiamo_tracker/prometheus-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
  labels:
    app: prometheus-kubernetes
  name: prometheus
  namespace: monitoring
spec:
  rules:
  - host: prometheus.track.contiamo.com
    http:
      paths:
      - backend:
          serviceName: prometheus-k8s
          servicePort: web
        path: /

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-production
  name: prometheus.track.contiamo.com-oauth2-proxy
  namespace: monitoring
spec:
  rules:
  - host: prometheus.track.contiamo.com
    http:
      paths:
      - backend:
          serviceName: oauth2-proxy
          servicePort: 4180
        path: /oauth2
  tls:
  - hosts:
    - prometheus.track.contiamo.com
    secretName: prometheus.track.contiamo.com-tls-letsencrypt-prod
